--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,8 +1,11 @@
 body {
   margin: 0;
   padding: 0;
+  color: #484848;
+  font-size: 14px;
+  font-family: Circular,"Helvetica Neue",Helvetica,Arial, Helvetica, sans-serif;
 }
 
-div {
+main {
   min-height: calc(100vh - 130px);
 }
