--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,7 +1,8 @@
 footer {
-  background-color: #00ff00;
+  color: white;
   height: 60px;
   width: 100%;
+  border-top: 1px solid #CCCCCC;
   position: fixed;
   bottom: 0;
   text-align: center;
@@ -11,3 +12,5 @@ footer p {
   font-size: 16px;
   line-height: 60px;
   margin: 0;
+  color: #000;
+}
