--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,5 +1,26 @@
 header {
-  background-color: #ff0000;
   height: 70px;
   width: 100%;
+  color: white;
+  border-bottom: 1px solid #CCCCCC;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/logo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-right: 20px;
+}
+
+.logo::after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+
+.logo img {
+  vertical-align: middle;
 }
